css/style.css
*{
    box-sizing: border-box;
}

/* Fonts */
.content-heading, .dropdown{
    font-family: 'Montserrat', sans-serif;
}
.content-container, .footer-text{
    font-family: 'Open Sans', sans-serif;
}
/* -------------------------- */

html, body {
    height: 100%;
  }
  body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
  }
.wrapper{
    flex: 1;
    text-align: left;
    position: relative;
  }

.wrapper{
    background: linear-gradient(
        to bottom, 
        #9099A2 0%, 
        #9099A2 40%, 
        #D5D5D5 40%, 
        #D5D5D5 100%
      );
}

/* COLOR HEADINGS and p */
/* ---------------------------------------------- */
h1, h5, .footer-text, nav, a{
    color: white;
}
/* ---------------------------------------------- */


/* HEADING */
/* ---------------------------------------------- */
.content-heading, .dropdown * {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.dropdown {
    width: 100%;
    position: sticky;
    display: inline-block;
    top: -0.8px;
}

/* Change visuals in all the elements inside dropdown */
.dropdown * {
    width: 100%;
    color: white;
    background-color: #6D7993;
    border-bottom: 0.5px solid white;
    cursor: pointer;
}
.dropbtn{
    border: 1px solid white;
}

.dropbtn, a{
    padding: 12px 16px;
}
.dropdown-content{
    display: none;
    border: none;
    position: absolute;
    width: 100%;
    text-align: center;
    z-index: 1;
}
/* Links inside the dropdown */
.dropdown-content a {
    text-decoration: none;
    display: block;
}
/* Show dropdown on hover */
.dropdown:hover .dropdown-content{
    display: block;
}
/* Change color of dropdown links on hover */
.dropdown a:hover{
    background-color: #D5D5D5;
    color: white;
}
.dropdown a:nth-child(1):hover{
    border-top: 1px solid #6D7993;
}
/* Color change on dropdown button when content is shown */
.dropdown:hover .dropbtn{
    background-color: #D5D5D5;
    color: #6D7993;
    border: none;
}







/* CONTAINER CONTENT */
/* ---------------------------------------------- */
.content-container{
    width: 80%;
    margin: 0 auto;
    text-align: left;
}
.container-picture{
    padding: 30px 0 0 0;
    text-align: center;
}
.main-photo{
    width: 140px;
    height: 200px;
}
.container-information{

}
.container-links{
    width: 100%;
    display: flex;
    flex-wrap: wrap;
}

/* FOOTER */
/* ---------------------------------------------- */
#footer{
    background-color: #9099A2;
}
.social-icon{
    width: 20px;
    height: 20px;
}
.footer-text{
    margin: 5px;
}
.footer-center{
    text-align: center;
}
.links-button{
    list-style-type: none;
    width: 100%;
    height: auto;
    margin: 2px 0;
    background-color: lightgrey;
    border-bottom: 2px solid black;
    color: white;
    text-align: center;
    text-decoration: none;
    font-size: 28px;
}
/* ---------------------------------------------- */


/* Menu big screen*/
/* ---------------------------------------------- */
/* HEADING */
/* ---------------------------------------------- */

/* HEADING */
/* ---------------------------------------------- */

/* .content-heading{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.dropbtn{
    background-color: #287bf8;
    color: white;
    font-size: 20px;
    border: 0.1px solid;
    cursor: pointer;
    box-shadow: 1px 1px 1px black;
}
.dropdown{
    position: initial;
    display: inline-block;
    text-align: center;
}
.dropdown-content{
    display: none;
    position: initial;
    background-color: #287bf8;
    border-radius: 0;
}
.dropdown:hover .dropdown-content{
    display: block;
}
.dropdown-content a {
    color: white;
    text-decoration: none;
    display: inline-block;
}
.dropdown:hover .dropbtn {
    background-color: white;
    color: #287bf8;
    border-radius: 0;
    box-shadow: none;
}
.dropdown-links{
    margin: 5px;
    padding: 5px 0 5px 0;
    width: 200px;
    border: 0.1px solid lightskyblue;
} */

